--- a/src/aPortal/WebContent/WEB-INF/config/sysdb.properties
+++ b/src/aPortal/WebContent/WEB-INF/config/sysdb.properties
@@ -2,5 +2,5 @@
 SYSDB_DBTYPE = mysql
 SYSDB_DB_CONNECT_URL = jdbc:mysql://10.184.211.80:3306/mysql
 SYSDB_DB_CONNECT_NAME = root
-SYSDB_DB_CONNECT_PASSWORD.password=Huawei@123
-SYSDB_DB_CONNECT_PASSWORD.encryptpassword=
+SYSDB_DB_CONNECT_PASSWORD.password=
+SYSDB_DB_CONNECT_PASSWORD.encryptpassword=3t3M9YU8ekwN9pVpGXoD+A==;ZE30W3FcUxWm9GvRyNlk\/w==
